@@ -1,6 +1,5 @@
 ## rmsfact: Amazing Random Facts About the World's Greatest Hacker 
 
-[![Build Status](https://travis-ci.org/eddelbuettel/rmsfact.svg)](https://travis-ci.org/eddelbuettel/rmsfact) 
 [![CI](https://github.com/eddelbuettel/rmsfact/workflows/ci/badge.svg)](https://github.com/eddelbuettel/rmsfact/actions?query=workflow%3Aci)
 [![License](http://img.shields.io/badge/license-GPL--3-brightgreen.svg?style=flat)](http://www.gnu.org/licenses/gpl-3.0.html) 
 [![CRAN](http://www.r-pkg.org/badges/version/rmsfact)](http://cran.r-project.org/package=rmsfact) 
