@@ -1,3 +1,7 @@
+2021-12-27  Dirk Eddelbuettel  <edd@debian.org>
+
+	* README.md: Remove unused continuous integration artifact and badge
+
 2021-05-28  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (URL): Add URL to DESCRIPTION
